# backend-api

./: .gitignore  CODING_GUIDELINES.md  COMMIT_CONVENTION.md  README.md  main.py  models.py  pyproject.toml  services.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/endpoints/: pipelines.py
backend/app/core/: config.py  db.py
backend/app/crud/: __init__.py  crud_pipeline.py
backend/app/models/: __init__.py  pipeline.py
backend/app/schemas/: __init__.py  pipeline.py
backend/app/services/: processing_service.py
backend/app/workers/: tasks.py
crawler_ai_project_files/: .gitignore  config.py  main.py  schema.yaml  stores.py  testfile
crawler_ai_project_files/ingestion/adapters/: __init__.py  base.py
crawler_ai_project_files/log/: logging_utils.py
crawler_ai_project_files/normalization/: base.py  normalizer.py  utils.py
frontend/: README.md  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: page-header.tsx  sidebar.tsx  theme-controller.tsx  theme-toggle.tsx
frontend/hooks/: use-mobile.tsx  use-toast.ts
frontend/lib/: utils.ts
frontend/services/: apiClient.ts
frontend/store/: mapStore.ts  model-store.tsx  top-navgation-store.tsx
frontend/types/: api.ts  index.ts  user.ts
ingestion/: ingestor.py
ingestion/adapters/: api_adapter.py  file_adapter.py  web_scraper_adapter.py
normalization/: __init__.py
pipeline/: .gitignore  config.py  dependencies.py  main.py  models.py  pyproject.toml
pipeline/ingestion/: __init__.py  core.py  ingestor.py
pipeline/ingestion/adapters/: api_adapter.py  base.py  file_adapter.py  web_scraper_adapter.py
pipeline/ingestion/ingestors/: __init__.py  base.py  mapping_ingest.py  simple_ingest.py
pipeline/log/: log_stream.py
pipeline/models/: adapters.py  canonical.py  crawler.py  ingestion.py  pipeline.py
pipeline/routers/: logs.py  pipelines.py
pipeline/scheduler/: jobs.py  manager.py  utils.py
pipeline/services/: pipeline_service.py
pipeline/stores/: base.py  memory.py
pipeline/tests/: test_api_adapter.py  test_file_adapter.py  test_pipeline_service.py  test_scraper_adapter.py  test_scraper_adapter_integration.py
(+91 files in other folders)
