[project]
name = "crawler-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.5.0.post8",
    "fastapi[standard]>=0.115.12",
    "inquirer>=3.4.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]
