# pyproject.toml
[project]
name = "backend"
version = "0.1.0"
description = "Customizable Automated Data Integration Pipeline Backend"
requires-python = ">=3.11" # Playwright and modern libraries benefit from newer Python
dependencies = [
    "fastapi",
    "uvicorn[standard]", # Includes performance extras
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",         # ORM
    "psycopg2-binary",    # Postgres driver (or asyncpg for async)
    "asyncpg",            # Async Postgres driver
    "alembic",            # Database migrations
    "celery",             # Background tasks
    "redis",              # Celery broker/backend
    "playwright",         # For self-hosted browser automation
    "beautifulsoup4",     # HTML parsing
    "python-readability", # Clean HTML content extraction
    "openai",             # Or anthropic, google-generativeai for LLM
    "pandas",             # Data manipulation, file reading, export
    "httpx",              # Async HTTP requests (for APIs, LLM calls)
    "python-multipart",   # For FastAPI file uploads
    "PyYAML",             # For YAML export (if needed later)
    "feedparser",         # For parsing RSS/Atom feeds (News)
    # Add other specific news API client libraries if needed
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
